<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2015 Yunus Emre Şeker. All rights reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/nav_group_nologin"
        android:checkableBehavior="none"
        android:visible="true">
        <item
            android:id="@+id/nav_add_acc"
            android:icon="@drawable/ic_action_add"
            android:title="@string/add_account" />
    </group>
    <group
        android:id="@+id/nav_group_login"
        android:checkableBehavior="none"
        android:menuCategory="secondary"
        android:visible="false">
        <item
            android:id="@+id/nav_balance"
            android:icon="@drawable/ic_action_swap_vert_circle"
            android:title="@string/balance_history" />
        <item
            android:id="@+id/nav_my_menus"
            android:icon="@drawable/ic_action_restaurant_menu"
            android:title="@string/my_menus" />
        <item
            android:id="@+id/nav_menu_order"
            android:icon="@drawable/ic_action_shopping_cart"
            android:title="@string/order_menu" />
        <item
            android:id="@+id/nav_menu_cancel"
            android:icon="@drawable/ic_action_highlight_remove"
            android:title="@string/cancel_order" />
        <item
            android:id="@+id/nav_caf_history"
            android:icon="@drawable/ic_action_receipt"
            android:title="@string/caf_history" />
    </group>
    <group
        android:id="@+id/nav_group_bottom"
        android:checkableBehavior="none"
        android:menuCategory="secondary">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_action_info_outline"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_bug_report"
            android:title="@string/feedback" />

    </group>

</menu>